@@ -1,5 +1,7 @@
 *SVN*
 
+* Support eager includes when going through a polymorphic has_many association. [Rick]
+
 * Added support for eagerly including polymorphic has_one associations. (closes #4525) [Rick]
 
     class Post < ActiveRecord::Base
